[user] swag init, need authenticate for me endpoints
